--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,11 @@
   "name": "runners",
   "app_id": "",
   "v2": true,
-  "typescript": true
+  "typescript": true,
+  "proxies":[
+    {
+      "path": "/api",
+      "proxyUrl": "https://markal.servehttp.com/runners/api"
+    }
+  ]
 }
