First fix for model generation + add missing cordova plugins

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
+    "phonegap-plugin-barcodescanner",
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
