--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -44,7 +44,6 @@ paths:
         200:
           description: An array of users
           schema:
-            type: object
             $ref: '#/definitions/User'
         default:
           description: Unexpected error
@@ -58,7 +57,7 @@ paths:
       parameters:
         - name: status
           in: query
-          description: "Allows to recover the runs according to their status such as : [reserved, finish, current]. Exemple : /runs?status=finish,current"
+          description: "Allows to recover the runs according to their status such as : [reserved, finish, current]. Example : /runs?status=finish,current"
           required: false
           type: string
       tags:
@@ -241,19 +240,17 @@ definitions:
         description: Unique identifier (PK)
         type: integer
       name:
-        description: Nom de la voiture (Vito 1)
+        description: Name of the car
         type: string
       type:
-        type: object
         $ref: '#/definitions/VehicleType'
       plate_number:
-        description: Numero de plaque de la voiture
+        description: Car plate number
         type: string
       nb_place:
-        description: Nombre de place disponible dans la voiture (la place du conducteur est exclue)
+        description: Number of places available in the car (driver's place is excluded)
         type: integer
       user:
-        type: object
         $ref: '#/definitions/User'
   User:
     type: object
@@ -283,13 +280,11 @@ definitions:
     type: object
     properties:
       vehicle:
-        type: object
         $ref: '#/definitions/Vehicle'
       status:
         type: string
         description: "Type : free, taken"
       user:
-        type: object
         $ref: '#/definitions/User'
 
   Run:
@@ -302,27 +297,27 @@ definitions:
         type: string
       waypoints:
         type: array
-        description: ""
+        description: "Lists the steps in geographical ways in order to complete the run"
         items:
           $ref: '#/definitions/Waypoint'
       begin_date:
         type: string
         format: date-time
-        description: Quand la course devrait commencer
+        description: When the race should start
       start_at:
         type: string
-        description: Quand commence la course
+        description: When the race begins (action of the runner)
         format: date-time
       end_at:
-        description: Quand fini la course
+        description: When the race ends
         type: string
         format: date-time
       status:
         type: string
-        description: "Status de la run : libre, incomplet, ..."
+        description: "Run status: free, incomplete, ..."
       runners:
         type: array
-        description: "Le tableau de runners nous permet de définir le nombre de runners ainsi que optionnelement les véhicules définit"
+        description: "The table of runners allows us to define the number of runners and the vehicles taken by the runner"
         items:
           $ref: '#/definitions/Runners'
 
@@ -333,20 +328,16 @@ definitions:
         type: string
         description: ""
       geocoder:
-        type: object
         $ref: '#/definitions/Geocoder'
 
   Runners:
     type: object
     properties:
       user:
-        type: object
         $ref: '#/definitions/User'
       vehicle_category:
-        type: object
         $ref: '#/definitions/VehicleType'
       vehicle:
-        type: object
         $ref: '#/definitions/Vehicle'
 
 
@@ -368,8 +359,6 @@ definitions:
         items:
           type: string
       geometry:
-        type: object
-        description: A GeocoderGeometry object
         $ref: '#/definitions/GeocoderGeometry'
       place_id:
         type: string
