--- a/package.json
+++ b/package.json
@@ -22,11 +22,20 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
+    "cordova-browser": "5.0.1",
+    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.1",
+    "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "2.0.1",
     "ionic-native": "2.4.1",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "node-sass": "^4.6.1",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
+    "web": "0.0.2",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
@@ -42,5 +51,18 @@
     "ionic-plugin-keyboard",
     "phonegap-plugin-barcodescanner"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "cordova": {
+    "plugins": {
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {}
+    },
+    "platforms": [
+      "browser"
+    ]
+  }
 }
