--- a/package.json
+++ b/package.json
@@ -12,35 +12,43 @@
     "docs": "typedoc --tsconfig tsconfig-type-docs.json --hideGenerator --out build/docs/ src/"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@ionic/storage": "1.1.7",
-    "cordova-browser": "5.0.1",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.1",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "ionic-angular": "2.0.1",
-    "ionic-native": "2.4.1",
+    "@angular/common": "^5.0.3",
+    "@angular/compiler": "^5.0.3",
+    "@angular/compiler-cli": "^5.0.3",
+    "@angular/core": "^5.0.3",
+    "@angular/forms": "^5.0.3",
+    "@angular/http": "^5.0.3",
+    "@angular/platform-browser": "^5.0.3",
+    "@angular/platform-browser-dynamic": "^5.0.3",
+    "@angular/tsc-wrapped": "^4.4.6",
+    "@ionic-native/barcode-scanner": "^4.4.2",
+    "@ionic-native/core": "^4.4.2",
+    "@ionic-native/splash-screen": "^4.4.2",
+    "@ionic-native/status-bar": "^4.4.2",
+    "@ionic/storage": "^2.1.3",
+    "cordova-browser": "^5.0.1",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.1.2",
+    "ionic-angular": "^3.9.2",
+    "ionic-cache": "^2.0.5",
+    "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "node-sass": "^4.6.1",
-    "rxjs": "5.0.0-beta.12",
-    "sw-toolbox": "3.4.0",
+    "ionicons": "^3.0.0",
+    "node-sass": "^4.7.2",
+    "phonegap-plugin-barcodescanner": "^7.0.0",
+    "rxjs": "^5.5.2",
+    "sw-toolbox": "^3.6.0",
+    "tslib": "^1.8.0",
     "web": "0.0.2",
-    "zone.js": "0.6.26"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.0",
-    "typescript": "2.0.9"
+    "@ionic/app-scripts": "^3.1.2",
+    "typescript": "^2.3.2"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
@@ -59,7 +67,9 @@
       "cordova-plugin-console": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-sqlite-storage": {},
+      "phonegap-plugin-barcodescanner": {}
     },
     "platforms": [
       "browser"
