--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "sw-toolbox": "^3.6.0",
     "tslib": "^1.8.1",
     "web": "0.0.2",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.18",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-ionic": "^2.0.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.6",
@@ -69,10 +71,18 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-sqlite-storage": {},
-      "phonegap-plugin-barcodescanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "d99aed80",
+        "CHANNEL_NAME": "Master",
+        "UPDATE_METHOD": "auto",
+        "UPDATE_API": "https://api.ionicjs.com",
+        "MAX_STORE": "2"
+      }
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
