--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
     "@ionic-native/splash-screen": "^4.5.2",
     "@ionic-native/status-bar": "^4.5.2",
     "@ionic/storage": "^2.1.3",
-    "cordova-android": "6.3.0",
     "cordova-browser": "^5.0.2",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-ionic": "^2.0.4",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.0",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -40,14 +38,15 @@
     "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "^3.0.0",
-    "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "phonegap-plugin-barcodescanner": "^7.0.0",
     "rxjs": "^5.5.5",
     "sw-toolbox": "^3.6.0",
     "tslib": "^1.8.1",
     "web": "0.0.2",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.18",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-ionic": "^2.0.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.6",
