--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cordova-plugin-statusbar": "^2.4.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.1.4",
+    "debug": "^3.1.0",
     "fullcalendar": "^3.8.2",
     "ionic-angular": "^3.9.2",
     "ionic-cache": "^2.0.5",
