--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -66,7 +66,7 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /user/{id}:
+  /users/{id}:
     patch:
       summary: Update a user
       tags:
@@ -312,26 +312,6 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-    delete:
-      summary: Delete a run
-      tags:
-        - Runs
-      security:
-        - AccessToken: []
-      parameters:
-        - name: id
-          required: true
-          in: path
-          type: number
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/Run'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
     get:
       summary: Run Types
       description:
@@ -358,55 +338,6 @@ paths:
           schema:
             $ref: '#/definitions/Error'
   /runs/{id}/waypoints:
-    delete:
-      summary: Delete all waypoints from a run
-      tags:
-        - Waypoints
-        - Runs
-      security:
-        - AccessToken: []
-      parameters:
-        - name: id
-          required: true
-          in: path
-          type: number
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/Run'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-    post:
-      summary: Bulk insert waypoints to a run
-      tags:
-        - Waypoints
-        - Runs
-      parameters:
-        - name: id
-          required: true
-          in: path
-          type: number
-        - name: waypoints
-          in: body
-          required: true
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Waypoint'
-      responses:
-        200:
-          description: OK
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Waypoint'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
     get:
       summary: Returns all the waypoints of a run
       parameters:
@@ -429,34 +360,6 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 
-  /runs/{id}/publish:
-    post:
-      summary: Publish a run.
-      description: A run must explicitly call this endpoint if it wants to be published.
-      tags:
-        - Runs
-      security:
-        - AccessToken: []
-      parameters:
-        - name: id
-          in: path
-          description: Unique identifier of the runner
-          required: true
-          type: number
-        - name: run
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Run'
-      responses:
-        200:
-          description: The newly created run
-          schema:
-            $ref: '#/definitions/Run'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
   /runs/{id}/start:
     post:
       summary: Start the run
@@ -574,7 +477,50 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /cars/{id}:
+  /vehicles/{id}/comments:
+    get:
+      summary: get the list of comments for a car
+      tags:
+        - Vehicles
+      parameters:
+        - name: id
+          required: true
+          in: path
+          type: number
+      responses:
+        200:
+          description: OK
+          type: array
+          items:
+            $ref: '#/definitions/Comment'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+    post:
+      summary: Add a new comment to a car
+      tags:
+        - Vehicles
+      parameters:
+        - name: id
+          required: true
+          in: path
+          type: number
+        - name: content
+          required: true
+          in: body
+          type: string
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/Comment'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+
+  /vehicles/{id}:
     delete:
       summary: Delete a car
       tags:
@@ -641,7 +587,7 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /cars/search:
+  /vehicles/search:
       get:
         summary: Returns an array of cars depending on search
         parameters:
@@ -665,7 +611,7 @@ paths:
             description: Unexpected error
             schema:
               $ref: '#/definitions/Error'
-  /cars:
+  /vehicles:
     post:
       summary: Create a new car
       description:  Create a car. You can easily create a car with only a car_type, if needed.
@@ -722,41 +668,7 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /vehicles:
-    get:
-      summary: Vehicles Types
-      description:
-        List all vehicles
-      parameters:
-        - name: status
-          in: query
-          description: "Allows you to retrieve a list of vehicles according to their status : [taken, free]. /vehicles?status=taken"
-          required: false
-          type: string
-        - name: type
-          in: query
-          description: "Allows you to retrieve a list of vehicles according to type such as : [Vito, Limo]. /vehicles?staus=taken&type=Limo"
-          required: false
-          type: string
-        - name: include
-          in: query
-          description: "Add user object if the vehicle is taken : /vehicles?include=user"
-          type: string
-      tags:
-        - Vehicles
-      security:
-        - AccessToken: []
-      responses:
-        200:
-          description: An array of vehicles
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Vehicle'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+
   /status/{model}:
     get:
       summary: Status for a given model
@@ -1354,8 +1266,27 @@ definitions:
       nb_place:
         description: Number of places available in the car (driver's place is excluded)
         type: integer
+      comments:
+        description: Array of comments on a car
+        type: array
+        items:
+          $ref: '#/definitions/Comment'
       # user:
       #   $ref: '#/definitions/User'
+  Comment:
+    type: object
+    properties:
+      id:
+        description: Unique identifier (PK)
+        type: integer
+      content:
+        description: Content of the comment
+        type: string
+      created_at:
+        description: Date when the comment was created
+        type: string
+      user:
+        $ref: '#/definitions/User'
   User:
     type: object
     properties:
