--- a/package.json
+++ b/package.json
@@ -90,9 +90,87 @@
       },
       "cordova-plugin-calendar": {}
     },
-    "platforms": [
-      "browser",
-      "android"
-    ]
-  }
+    "config": {
+        "ionic_copy": "./copy.config.js"
+    },
+    "dependencies": {
+        "@angular/common": "^5.1.2",
+        "@angular/compiler": "^5.1.2",
+        "@angular/compiler-cli": "^5.1.2",
+        "@angular/core": "^5.1.2",
+        "@angular/forms": "^5.1.2",
+        "@angular/http": "^5.1.2",
+        "@angular/platform-browser": "^5.1.2",
+        "@angular/platform-browser-dynamic": "^5.1.2",
+        "@angular/tsc-wrapped": "^4.4.6",
+        "@ionic-native/barcode-scanner": "^4.5.2",
+        "@ionic-native/core": "^4.5.2",
+        "@ionic-native/splash-screen": "^4.5.2",
+        "@ionic-native/status-bar": "^4.5.2",
+        "@ionic/storage": "^2.1.3",
+        "ap-angular2-fullcalendar": "^1.3.7",
+        "cordova-android": "6.3.0",
+        "cordova-browser": "^5.0.2",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-add-swift-support": "^1.7.1",
+        "cordova-plugin-console": "^1.1.0",
+        "cordova-plugin-device": "^1.1.7",
+        "cordova-plugin-ionic": "^2.0.4",
+        "cordova-plugin-splashscreen": "^4.1.0",
+        "cordova-plugin-statusbar": "^2.4.1",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.2.1",
+        "fullcalendar": "^3.8.2",
+        "ionic-angular": "^3.9.2",
+        "ionic-cache": "^2.0.5",
+        "ionic-native": "^2.9.0",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionicons": "^3.0.0",
+        "moment": "^2.20.1",
+        "node-sass": "^4.7.2",
+        "phonegap-plugin-barcodescanner": "^7.0.3",
+        "rxjs": "^5.5.5",
+        "sw-toolbox": "^3.6.0",
+        "tslib": "^1.8.1",
+        "web": "0.0.2",
+        "zone.js": "^0.8.18"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "^3.1.6",
+        "typescript": "^2.3.2"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "ionic-plugin-keyboard",
+        "phonegap-plugin-barcodescanner"
+    ],
+    "cordovaPlatforms": [],
+    "cordova": {
+        "plugins": {
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-sqlite-storage": {},
+            "phonegap-plugin-barcodescanner": {},
+            "cordova-plugin-ionic": {
+                "APP_ID": "d99aed80",
+                "CHANNEL_NAME": "Master",
+                "UPDATE_METHOD": "auto",
+                "UPDATE_API": "https://api.ionicjs.com",
+                "MAX_STORE": "2"
+            }
+        },
+        "platforms": [
+            "android",
+            "browser",
+            "ios"
+        ]
+    }
 }
